--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:id="@+id/ivMovieImage"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
