--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -12,11 +12,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvDetailTitle" />
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivDetailMovieImage"
-        tools:src="@mipmap/ic_launcher"/>
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ivDetailMovieImage"
+            tools:src="@mipmap/ic_launcher"/>
+        <ImageView
+            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:layout_centerInParent="true"
+            android:src="@drawable/youtube_light_color_icon" />
+    </RelativeLayout>
 
     <RatingBar
         android:layout_width="wrap_content"
